# legal-query-system

./: README.md
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/chat/: page.tsx
client/src/components/common/: logo.tsx  navbar.tsx  theme-toggle.tsx
client/src/components/ui/: button.tsx  switch.tsx  textarea.tsx
client/src/features/chat/components/: chat-input.tsx  chat-window.tsx  message-bubble.tsx  message-list.tsx  mode-toggle.tsx
client/src/features/chat/hooks/: use-chat.ts
client/src/features/chat/services/: legalq-api.ts
client/src/features/chat/types/: chat-types.ts
client/src/lib/: http-client.ts  providers.tsx
server/: .env.example  .gitignore  Dockerfile  REQUIREMENTS.md  pyproject.toml  requirements.txt  run.bat  run.sh  settings.toml
server/ingestion/: ingest.py
server/src/: __init__.py
server/src/app/: __init__.py  api.py  app.py  config.py  handlers.py
server/src/core/: __init__.py  exceptions.py
server/src/endpoints/: __init__.py  health.py  ingest.py  legal_qa.py
server/src/graph/: __init__.py  legal_qa_graph.py
server/src/llm/: __init__.py  llm_client.py
server/src/models/: __init__.py  prompts.py
server/src/nodes/: __init__.py  nodes.py
server/src/runner/: __init__.py  legal_qa_runner.py
server/src/services/: __init__.py  ingestion.py  retriever.py
server/src/state/: __init__.py  graph_state.py
